--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint-config-next": "13.2.4",
+    "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.0",
