--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "next": "13.2.4",
