--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
     "eslint-config-next": "13.2.4",
+    "feather-icons": "^4.29.0",
     "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
