--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,12 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
+    "draft-js": "^0.11.7",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
