--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
