--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "next": "13.2.4",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
