--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "typescript": "5.0.2",
+    "uuid": "^9.0.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "autoprefixer": "^10.4.14",
