--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "typescript": "5.0.2",
     "uuid": "^9.0.0",
