--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "feather-icons": "^4.29.0",
     "formik": "^2.2.9",
     "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
