fix : prettier 8.0.0 버전 수정 사항 적용

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -8,7 +8,7 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
