--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,21 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "proxy": {
+    "/ws-connection": {
+      "target": "ws://www.reduck.site",
+      "ws": true
+    }
+  },
   "dependencies": {
     "@iconify/react": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/stompjs": "^2.3.5",
     "axios": "^1.3.5",
     "eslint-config-next": "13.2.4",
     "feather-icons": "^4.29.0",
@@ -27,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
+    "socketjs-client": "^1.0.2",
     "typescript": "5.0.2",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
