--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
+    "openai": "^4.8.0",
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
