--- a/.github/workflows/test-lint-build.yml
+++ b/.github/workflows/test-lint-build.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           path: node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json') }}
+      - name: Generate Environment Variables File for Production
+        run: echo "NEXT_PUBLIC_OPEN_API=$NEXT_PUBLIC_OPEN_API" >> .env
+        env: 
+          NEXT_PUBLIC_OPEN_API: ${{ secrets.OPEN_API }}
       - name: Install Dependencies
         run: npm install
         working-directory: ${{ env.working-directory }}
