--- a/.github/workflows/test-lint-build.yml
+++ b/.github/workflows/test-lint-build.yml
@@ -24,9 +24,9 @@ jobs:
           path: node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json') }}
       - name: Generate Environment Variables File for Production
-        run: echo "NEXT_PUBLIC_OPEN_API=$NEXT_PUBLIC_OPEN_API" >> .env
-        env: 
-          NEXT_PUBLIC_OPEN_API: ${{ secrets.OPEN_API }}
+        run: |
+          echo "NEXT_PUBLIC_OPEN_API=${{ secrets.NEXT_PUBLIC_OPEN_API }}" >> .env
+          cat .env
       - name: Install Dependencies
         run: npm install
         working-directory: ${{ env.working-directory }}
