--- a/.github/workflows/test-lint-build.yml
+++ b/.github/workflows/test-lint-build.yml
@@ -25,9 +25,12 @@ jobs:
           key: npm-packages-${{ hashFiles('**/package-lock.json') }}
       - name: Generate Environment Variables File for Production
         run: |
-          echo "NEXT_PUBLIC_OPEN_API=${{ secrets.NEXT_PUBLIC_OPEN_API }}" >> .env
-          echo "OPENAI_API_KEY=${{ secrets.NEXT_PUBLIC_OPEN_API }}" >> .env
+          echo "NEXT_PUBLIC_OPEN_API=$NEXT_PUBLIC_OPEN_API" >> .env.production
+          echo "OPENAI_API_KEY=$OPENAI_API_KEY" >> .env.production
           cat .env
+        env:
+          NEXT_PUBLIC_OPEN_API: ${{ secrets.NEXT_PUBLIC_OPEN_API }}
+          OPENAI_API_KEY: ${{ secrets.NEXT_PUBLIC_OPEN_API }}
       - name: Install Dependencies
         run: npm install
         working-directory: ${{ env.working-directory }}
