--- a/.github/workflows/test-lint-build.yml
+++ b/.github/workflows/test-lint-build.yml
@@ -28,6 +28,7 @@ jobs:
           echo "NEXT_PUBLIC_OPEN_API=$NEXT_PUBLIC_OPEN_API" >> .env.production
           echo "OPENAI_API_KEY=$OPENAI_API_KEY" >> .env.production
           cat .env.production
+        working-directory: ${{ env.working-directory }}
         env:
           NEXT_PUBLIC_OPEN_API: ${{ secrets.NEXT_PUBLIC_OPEN_API }}
           OPENAI_API_KEY: ${{ secrets.NEXT_PUBLIC_OPEN_API }}
