--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@iconify/react": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.5",
+    "@tomfreudenberg/next-auth-mock": "^0.5.6",
     "@types/node": "18.15.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
