--- a/client/package.json
+++ b/client/package.json
@@ -58,10 +58,15 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.14",
+    "msw": "^1.3.2",
+    "msw-storybook-addon": "^1.9.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "redux-devtools-extension": "^2.13.9",
     "storybook": "^7.4.6",
     "tailwindcss": "^3.3.1"
+  },
+  "msw": {
+    "workerDirectory": ".storybook/public"
   }
 }
