--- a/.github/workflows/test-lint-build.yml
+++ b/.github/workflows/test-lint-build.yml
@@ -2,7 +2,6 @@ name: 'test-lint-build'
 
 on:
   push:
-  pull_request:
 
 jobs:
   test:
@@ -24,7 +23,7 @@ jobs:
           path: node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json') }}
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
         working-directory: ${{ env.working-directory }}
       - run: npm run lint
         if: ${{ always() }}
