chore: lighthouse script 에러 수정

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -40,9 +40,7 @@ jobs:
 
             results.forEach((result) => {
               const { summary, jsonPath } = result;
-              const { audits } = details;
-
-              const details = JSON.parse(fs.readFileSync(jsonPath));
+              const { audits } = JSON.parse(fs.readFileSync(jsonPath));
               const formatResult = (res) => Math.round(res * 100);
 
               Object.keys(summary).forEach(
