--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -61,11 +61,11 @@ jobs:
               ].join("\n");
 
             });
-            core.setOutput('comments', comments)
+            core.setOutput('comment', comment)
 
       - name: comment PR
         uses: unsplash/comment-on-pr@v1.3.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          msg: ${{ steps.format_lighthouse_score.outputs.comments}}
+          msg: ${{ steps.format_lighthouse_score.outputs.comment}}
