--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -33,33 +33,23 @@ jobs:
         with:
           github-token: ${{secrets.BAE_SH_GITHUB_TOKEN}}
           script: |
-
             const fs = require('fs');
             const results = JSON.parse(fs.readFileSync("./client/lhci_reports/manifest.json"));
             let comments = "";
-
             results.forEach((result) => {
               const { summary, jsonPath } = result;
               const { audits } = JSON.parse(fs.readFileSync(jsonPath));
               const formatResult = (res) => Math.round(res * 100);
-
               Object.keys(summary).forEach(
                 (key) => (summary[key] = formatResult(summary[key]))
               );
-
-              const score = (res) => (res >= 90 ? "🟢" : res >= 80 ? "🟠" : "🔴");
-
+              const score = (res) => (res >= 90 ? "🟢" : res >= 50 ? "🟠" : "🔴");
               const comment = [
                 `⚡️ Lighthouse report!`,
                 `| Category | Score |`,
                 `| --- | --- |`,
-                `| ${score(summary.performance)} Performance | ${summary.performance} |`,
-                `| ${score(summary.accessibility)} Accessibility | ${summary.accessibility} |`,
-                `| ${score(summary["best-practices"])} Best Practices | ${summary["best-practices"]} |`,
-                `| ${score(summary.seo)} SEO | ${summary.seo} |`,
-                `| ${score(summary.pwa)} PWA | ${summary.pwa} |`,
+                `| ${score(summary.performance)} Performance | ${summary.performance} |`
               ].join("\n");
-
               const detail = [
                 `| Category | Score |`,
                 `| --- | --- |`,
@@ -71,8 +61,7 @@ jobs:
               ].join("\n");
               comments += comment + "\n" + detail + "\n";
             });
-            core.setOutput('comment', comments)
-
+            core.setOutput('comments', comments)
       - name: comment PR
         uses: unsplash/comment-on-pr@v1.3.0
         env:
