--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -15,6 +15,13 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Generate Environment Variables File for Production
+        run: |
+          echo "NEXT_PUBLIC_OPEN_API=$NEXT_PUBLIC_OPEN_API" >> .env.production
+          cat .env.production
+        working-directory: ${{ env.working-directory }}
+        env:
+          NEXT_PUBLIC_OPEN_API: ${{ secrets.NEXT_PUBLIC_OPEN_API }}
       - name: Install packages
         run: npm ci && npm install -g @lhci/cli@0.8.x
         working-directory: ${{ env.working-directory }}
