--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.15.7",
-    "@types/react": "18.0.28",
+    "@types/react": "^18.2.31",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
     "eslint-config-next": "13.2.4",
