chore: CI yarn 패키지 관리로 변경

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Install dependencies
-        run: npm ci
+        run: yarn install
         working-directory: ${{ env.working-directory }}
       - name: Generate Environment Variables File for Production
         run: |
