--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -21,10 +21,10 @@ jobs:
         env:
           NEXT_PUBLIC_OPEN_API: ${{ secrets.NEXT_PUBLIC_OPEN_API }}
       - name: Install packages
-        run: npm ci && npm install -g @lhci/cli@0.8.x
+        run: yarn install && yarn add -g @lhci/cli@0.8.x
         working-directory: ${{ env.working-directory }}
       - name: Build
-        run: npm run build
+        run: yarn build
         working-directory: ${{ env.working-directory }}
       - name: Run Lighthouse CI
         run: lhci autorun
