--- a/.github/workflows/test-lint-build.yml
+++ b/.github/workflows/test-lint-build.yml
@@ -28,11 +28,11 @@ jobs:
         env:
           NEXT_PUBLIC_OPEN_API: ${{ secrets.NEXT_PUBLIC_OPEN_API }}
       - name: Install Dependencies
-        run: npm ci
+        run: yarn install
         working-directory: ${{ env.working-directory }}
-      - run: npm run lint
+      - run: yarn lint
         if: ${{ always() }}
         working-directory: ${{ env.working-directory }}
-      - run: npm run build
+      - run: yarn build
         if: ${{ always() }}
         working-directory: ${{ env.working-directory }}
