--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,12 @@
     "@iconify/react": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@stomp/stompjs": "^7.0.0",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tanstack/react-query": "^4.29.5",
+    "@tiptap/extension-highlight": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "@tomfreudenberg/next-auth-mock": "^0.5.6",
     "@types/node": "18.15.7",
     "@types/react": "^18.2.31",
@@ -33,6 +38,7 @@
     "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
     "openai": "^4.8.0",
+    "postcss-nesting": "^12.0.1",
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
