--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tanstack/react-query": "^4.29.5",
+    "@tiptap/extension-code-block-lowlight": "^2.1.12",
     "@tiptap/extension-highlight": "^2.1.12",
     "@tiptap/extension-image": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
@@ -35,6 +36,7 @@
     "axios": "^1.3.5",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
+    "lowlight": "^3.1.0",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
