chore: yml js 로직 에러 수정

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -46,10 +46,8 @@ jobs:
             let comments = "";
 
             results.forEach((result) => {
-              const { summary, jsonPath } = result;
-              const { audits } = details;
+              const { summary } = result;
 
-              const details = JSON.parse(fs.readFileSync(jsonPath));
               const formatResult = (res) => Math.round(res * 100);
 
               Object.keys(summary).forEach(
