--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -35,47 +35,48 @@ jobs:
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
         working-directory: ${{ env.working-directory }}
-      # - name: Format lighthouse score
-      #   id: format_lighthouse_score
-      #   uses: actions/github-script@v3
-      #   with:
-      #     github-token: ${{secrets.GITHUB_TOKEN}}
-      #     script: |
+      - name: Format lighthouse score
+        id: format_lighthouse_score
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
 
-      #       const fs = require('fs');
-      #       const results = JSON.parse(fs.readFileSync("${{ env.working-directory }}/lhci_reports/manifest.json"));
-      #       let comments = "";
+            const fs = require('fs');
+            const results = JSON.parse(fs.readFileSync("${{ env.working-directory }}/lhci_reports/manifest.json"));
+            let comments = "";
 
-      #       results.forEach((result) => {
-      #         const { summary } = result;
+            results.forEach((result,index) => {
+              const { summary } = result;
 
-      #         const formatResult = (res) => Math.round(res * 100);
+              const formatResult = (res) => Math.round(res * 100);
 
-      #         Object.keys(summary).forEach(
-      #           (key) => (summary[key] = formatResult(summary[key]))
-      #         );
+              Object.keys(summary).forEach(
+                (key) => (summary[key] = formatResult(summary[key]))
+              );
 
-      #         const score = (res) => (res >= 90 ? "🟢" : res >= 70 ? "🟠" : "🔴");
+              const score = (res) => (res >= 90 ? "🟢" : res >= 70 ? "🟠" : "🔴");
 
-      #         const comment = [
-      #           `⚡️ Lighthouse report!`,
-      #           `| Category | Score |`,
-      #           `| --- | --- |`,
-      #           `| ${score(summary.performance)} Performance | ${summary.performance} |`,
-      #           `| ${score(summary.accessibility)} Accessibility | ${summary.accessibility} |`,
-      #           `| ${score(summary['best-practices'])} Best practices | ${summary['best-practices']} |`,
-      #           `| ${score(summary.seo)} SEO | ${summary.seo} |`,
-      #           `| ${score(summary.pwa)} PWA | ${summary.pwa} |`,
-      #         ].join("\n");
+              const comment = [
+                `⚡️ Lighthouse report ${index}!`,
+                `| Category | Score |`,
+                `| --- | --- |`,
+                `| ${score(summary.performance)} Performance | ${summary.performance} |`,
+                `| ${score(summary.accessibility)} Accessibility | ${summary.accessibility} |`,
+                `| ${score(summary['best-practices'])} Best practices | ${summary['best-practices']} |`,
+                `| ${score(summary.seo)} SEO | ${summary.seo} |`,
+                `| ${score(summary.pwa)} PWA | ${summary.pwa} |`,
+                `| --- | --- |`,
+              ].join("\n");
 
-      #         comments += comment + "\n";
-      #       });
+              comments += comment + "\n";
+            });
 
-      #       core.setOutput('comments', comments)
+            core.setOutput('comments', comments)
 
-      # - name: comment PR
-      #   uses: unsplash/comment-on-pr@v1.3.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     msg: ${{ steps.format_lighthouse_score.outputs.comments}}
+      - name: comment PR
+        uses: unsplash/comment-on-pr@v1.3.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          msg: ${{ steps.format_lighthouse_score.outputs.comments}}
