--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -58,7 +58,7 @@ jobs:
               const score = (res) => (res >= 90 ? "🟢" : res >= 70 ? "🟠" : "🔴");
 
               const comment = [
-                `⚡️ Lighthouse report ${index}!`,
+                `⚡️ [Lighthouse report ${index}](${result.url})`,
                 `| Category | Score |`,
                 `| --- | --- |`,
                 `| ${score(summary.performance)} Performance | ${summary.performance} |`,
@@ -66,7 +66,7 @@ jobs:
                 `| ${score(summary['best-practices'])} Best practices | ${summary['best-practices']} |`,
                 `| ${score(summary.seo)} SEO | ${summary.seo} |`,
                 `| ${score(summary.pwa)} PWA | ${summary.pwa} |`,
-                `| --- | --- |`,
+                `\n`,
               ].join("\n");
 
               comments += comment + "\n";
