chore: 불필요한 링크 제거

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -58,7 +58,7 @@ jobs:
               const score = (res) => (res >= 90 ? "🟢" : res >= 70 ? "🟠" : "🔴");
 
               const comment = [
-                `⚡️ [Lighthouse report ${index}](${result.url})`,
+                `⚡️ Lighthouse report ${index}`,
                 `| Category | Score |`,
                 `| --- | --- |`,
                 `| ${score(summary.performance)} Performance | ${summary.performance} |`,
