docs: lighthouse branch ignore 설정

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,5 +1,9 @@
 name: Run lighthouse CI When Push
-on: [push]
+on:
+  push:
+    branches-ignore:
+    - 'dev'
+    - 'main'
 jobs:
   lhci:
     name: Lighthouse CI
