--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-error-boundary": "^4.0.11",
     "react-redux": "^8.0.5",
     "socketjs-client": "^1.0.2",
+    "tiptap-extension-resize-image": "^1.0.2",
     "typescript": "5.0.2",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
