chore: lighthouse pull_request 시 트리거로 변경

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,9 +1,9 @@
 name: Run lighthouse CI When Push
 on:
-  push:
+  pull_request:
     branches-ignore:
-    - 'dev'
-    - 'main'
+      - 'dev'
+      - 'main'
 jobs:
   lhci:
     name: Lighthouse CI
