--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^5.17.0",
     "@tiptap/extension-code-block-lowlight": "^2.1.12",
     "@tiptap/extension-highlight": "^2.1.12",
     "@tiptap/extension-image": "^2.1.12",
