--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-code-block-lowlight": "^2.1.12",
     "@tiptap/extension-highlight": "^2.1.12",
     "@tiptap/extension-image": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.13",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
